# beatcrafter

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md
.github/workflows/: build-all-platforms.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: IntensityMapper.cpp  IntensityMapper.h  MidiConstants.h  Pattern.cpp  Pattern.h  PatternEngine.cpp  PatternEngine.h  StyleIntensityGenerator.cpp  StyleIntensityGenerator.h
Source/GUI/: LookAndFeel.cpp  LookAndFeel.h  PatternGrid.cpp  PatternGrid.h  SlotManager.cpp  SlotManager.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Core/: IntensityMapper.cpp  IntensityMapper.h  Pattern.cpp  Pattern.h  PatternEngine.cpp  PatternEngine.h  StyleManager.cpp  StyleManager.h
src/Core/Styles/: ElectronicStyle.cpp  FunkStyle.cpp  HipHopStyle.cpp  JazzStyle.cpp  LatinStyle.cpp  MetalStyle.cpp  PunkStyle.cpp  RockStyle.cpp
src/GUI/: IconButton.h  IntensityIndicator.h  LookAndFeel.cpp  LookAndFeel.h  PatternGrid.cpp  PatternGrid.h  SlotManager.cpp  SlotManager.h
